backend/src/parsers/snapshots/agent_zero_backend__parsers__redfin__tests__redfin_2643_e8th_off_market.snap
---
source: src/parsers/redfin.rs
expression: listing_to_snapshot(listing)
---
{
  "id": 0,
  "search_profile_id": 0,
  "title": "2643 E 8th Ave, Vancouver, BC - 5 beds/4 baths",
  "description": "",
  "price": 770000,
  "price_currency": "CAD",
  "street_address": "2643 E 8th Ave",
  "city": "Vancouver",
  "region": "BC",
  "postal_code": "V5M 1W4",
  "country": "CA",
  "lat": 49.2631465,
  "lon": -123.0510302,
  "property_type": "Single Family Residential",
  "bedrooms": 5,
  "bathrooms": 4,
  "sqft": 2184,
  "land_sqft": null,
  "year_built": 2013,
  "parking_total": 1,
  "parking_garage": 1,
  "parking_carport": null,
  "parking_pad": null,
  "radiant_floor_heating": null,
  "ac": null,
  "laundry_in_unit": null,
  "skytrain_station": null,
  "skytrain_walk_min": null,
  "offer_price": null,
  "property_tax": null,
  "hoa_monthly": null,
  "down_payment_pct": null,
  "mortgage_interest_rate": null,
  "amortization_years": null,
  "mortgage_monthly": null,
  "monthly_total": null,
  "monthly_cost": null,
  "has_rental_suite": null,
  "rental_income": null,
  "school_elementary": null,
  "school_elementary_rating": null,
  "school_middle": null,
  "school_middle_rating": null,
  "school_secondary": null,
  "school_secondary_rating": null,
  "redfin_url": "https://www.redfin.ca/bc/vancouver/2643-E-8th-Ave-V5M-1W4/home/155349348",
  "realtor_url": null,
  "rew_url": null,
  "zillow_url": null,
  "mls_number": null,
  "listed_date": null,
  "source_status": "Off Market",
  "status": "Interested",
  "notes": null,
  "images": [],
  "open_houses": [],
  "created_at": "",
  "updated_at": null,
  "open_houses": []
}
