backend/src/parsers/snapshots/agent_zero_backend__parsers__redfin__tests__redfin_2748_e23rd.snap
---
source: backend/src/parsers/redfin.rs
expression: listing_to_snapshot(listing)
---
{
  "id": 0,
  "search_profile_id": null,
  "title": "2748 E 23rd Ave, Vancouver - 5 beds/3.5 baths",
  "description": "Welcome to this WELL-MAINTAINED Custom built 5 Bed 3.5 Bath family home w/over 2200 sq ft of UPDATED OPEN-CONCEPT living. SPACIOUS main flr living/family areas, dining w/walkout to SOUTH patio &amp; terraced yard + BRIGHT kitchn w/36&rdquo; 5 burnr gas stove, French door fridge, shakr cabs, stone countrs &amp; guest bath-perfect for entertaining! Upstairs 4 generous sized bedrms, 2 baths &amp; a TOP FLR PRIMARY, open office/flex space, balcony &amp; mountain vws. Updates inc kitchen, bathrms, laminate flrs, windows/doors, lighting, 2018 HWT &amp; 2020 HE boiler. Lots of parking in 2 car grg, open spot in lane &amp; in front on PRETTY tree lined street. Walk to Nootka El, Windermere Sec, Renfrew Com Ctr, Trout Lake, Nanaimo Skytrain &amp; quick drive to Superstore, Walmart, Can Tire, T&amp;T &amp; Hwy 1. OPEN HOUSE SUN, 2-4 PM ",
  "price": 1898000,
  "price_currency": "CAD",
  "street_address": "2748 E 23rd Ave",
  "city": "Vancouver",
  "region": "BC",
  "postal_code": "V5R 1A8",
  "country": "CA",
  "lat": 49.2495152,
  "lon": -123.047982,
  "property_type": "Single Family Residential",
  "bedrooms": 5,
  "bathrooms": null,
  "sqft": 2234,
  "land_sqft": 3960,
  "year_built": 1994,
  "parking_total": 2,
  "parking_garage": 2,
  "parking_carport": null,
  "parking_pad": null,
  "radiant_floor_heating": null,
  "ac": null,
  "laundry_in_unit": true,
  "skytrain_station": null,
  "skytrain_walk_min": null,
  "community_center_walk_min": null,
  "library_walk_min": null,
  "offer_price": null,
  "property_tax": 8610,
  "hoa_monthly": null,
  "down_payment_pct": null,
  "mortgage_interest_rate": null,
  "amortization_years": null,
  "mortgage_monthly": null,
  "monthly_total": null,
  "monthly_cost": null,
  "has_rental_suite": null,
  "rental_income": null,
  "school_elementary": null,
  "school_elementary_rating": null,
  "school_middle": null,
  "school_middle_rating": null,
  "school_secondary": null,
  "school_secondary_rating": null,
  "redfin_url": "https://www.redfin.ca/bc/vancouver/2748-E-23rd-Ave-V5R-1A7/home/154849597",
  "realtor_url": null,
  "rew_url": null,
  "zillow_url": null,
  "mls_number": "R3088944",
  "listed_date": "2026-02-11",
  "source_status": null,
  "status": "Interested",
  "notes": null,
  "agent_review_comment": null,
  "agent_review_state": null,
  "agent_review_error_code": null,
  "agent_review_error_message": null,
  "agent_review_started_at": null,
  "agent_review_finished_at": null,
  "images": [
    {
      "id": 0,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_4.jpg",
      "created_at": ""
    },
    {
      "id": 1,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_1_3.jpg",
      "created_at": ""
    },
    {
      "id": 2,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_2_3.jpg",
      "created_at": ""
    },
    {
      "id": 3,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_3_3.jpg",
      "created_at": ""
    },
    {
      "id": 4,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_4_3.jpg",
      "created_at": ""
    },
    {
      "id": 5,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_5_3.jpg",
      "created_at": ""
    },
    {
      "id": 6,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_6_3.jpg",
      "created_at": ""
    },
    {
      "id": 7,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_7_3.jpg",
      "created_at": ""
    },
    {
      "id": 8,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_8_3.jpg",
      "created_at": ""
    },
    {
      "id": 9,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_9_3.jpg",
      "created_at": ""
    },
    {
      "id": 10,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_10_3.jpg",
      "created_at": ""
    },
    {
      "id": 11,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_11_3.jpg",
      "created_at": ""
    },
    {
      "id": 12,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_12_3.jpg",
      "created_at": ""
    },
    {
      "id": 13,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_13_3.jpg",
      "created_at": ""
    },
    {
      "id": 14,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_14_3.jpg",
      "created_at": ""
    },
    {
      "id": 15,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_15_3.jpg",
      "created_at": ""
    },
    {
      "id": 16,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_16_3.jpg",
      "created_at": ""
    },
    {
      "id": 17,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_17_3.jpg",
      "created_at": ""
    },
    {
      "id": 18,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_18_3.jpg",
      "created_at": ""
    },
    {
      "id": 19,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_19_3.jpg",
      "created_at": ""
    },
    {
      "id": 20,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_20_3.jpg",
      "created_at": ""
    },
    {
      "id": 21,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_21_3.jpg",
      "created_at": ""
    },
    {
      "id": 22,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_22_3.jpg",
      "created_at": ""
    },
    {
      "id": 23,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_23_3.jpg",
      "created_at": ""
    },
    {
      "id": 24,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_24_3.jpg",
      "created_at": ""
    },
    {
      "id": 25,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_25_3.jpg",
      "created_at": ""
    },
    {
      "id": 26,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_26_3.jpg",
      "created_at": ""
    },
    {
      "id": 27,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_27_2.jpg",
      "created_at": ""
    },
    {
      "id": 28,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_28_2.jpg",
      "created_at": ""
    },
    {
      "id": 29,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_29_1.jpg",
      "created_at": ""
    },
    {
      "id": 30,
      "url": "https://ssl.cdn-redfin.com/photo/256/bigphoto/944/R3088944_30_0.jpg",
      "created_at": ""
    }
  ],
  "open_houses": [],
  "created_at": "",
  "updated_at": null,
  "open_houses": [
    {
      "start_time": "2026-03-01T14:00:00",
      "end_time": "2026-03-01T16:00:00"
    }
  ]
}
